# c-data-structures

./: .gitignore  CMakeLists.txt  README.md
include/: cds.h
include/cds/: defs.h  dlist.h  list.h  map.h  vec.h
include/cds/internal/: khash.h
tests/: CMakeLists.txt  test-dlist.c  test-list.c  test-map.c  test-vec.c
